noinst_LIBRARIES = libsqasm.a
libsqasm_a_SOURCES = ../common/util.hpp \
										 assembler.cpp \
										 assembler.hpp \
										 cell.cpp \
										 cell.hpp \
										 compilation-data.cpp \
										 compilation-data.hpp \
										 compilation-data-builder.cpp \
										 compilation-data-builder.hpp \
										 symbol-ref-cell.cpp \
										 symbol-ref-cell.hpp \
										 value-cell.cpp \
										 value-cell.hpp

